[gd_scene load_steps=5 format=3 uid="uid://bjcgghhh053jy"]

[ext_resource type="Script" path="res://Scripts/OxygenMachine.gd" id="1_8dnk0"]
[ext_resource type="Texture2D" uid="uid://c7ywavpryni5k" path="res://assets/oxy_fixed.png" id="2_tlngf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qbeo"]
size = Vector2(2.55845, 0.50233)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x80k4"]
size = Vector2(10.3752, 1.24021)

[node name="OxygenSystem" type="StaticBody2D"]
collision_layer = 5
script = ExtResource("1_8dnk0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(104, 65)
scale = Vector2(2.09146, 2.09146)
texture = ExtResource("2_tlngf")

[node name="RepairArea" type="CollisionShape2D" parent="."]
position = Vector2(53, 41.75)
scale = Vector2(12.5076, -76.6428)
shape = SubResource("RectangleShape2D_7qbeo")

[node name="FillUpArea" type="Area2D" parent="."]
position = Vector2(105, 47)
scale = Vector2(12.5076, -76.6428)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FillUpArea"]
position = Vector2(2.96744, -0.00617516)
shape = SubResource("RectangleShape2D_x80k4")

[node name="Up" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Down" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(388, -1)
polygon = PackedVector2Array(-311, 103, -179, 103, -157, 121, -409, 118, -388, 96, -388, 1, -370, -16, -348, -21, -326, -15, -310, 1, -316, 24, -342, 28, -349, 33, -348, 55, -341, 58, -315, 61)

[connection signal="body_entered" from="FillUpArea" to="." method="_on_fill_up_area_body_entered"]
[connection signal="body_exited" from="FillUpArea" to="." method="_on_fill_up_area_body_exited"]
[connection signal="timeout" from="Up" to="." method="_on_up_timeout"]
[connection signal="timeout" from="Down" to="." method="_on_down_timeout"]
